# agentic_rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SPEC.md  app.py  docker-compose.yml  eval.py  feedback_config.json  ingest.py  main.py  pyproject.toml
config/: azure.yaml  default.yaml  docker.yaml
docs/superpowers/plans/: 2026-04-07-feedback-loop.md  2026-04-09-background-ingest.md
docs/superpowers/specs/: 2026-04-06-feedback-loop-design.md  2026-04-09-background-ingest-design.md
evals/: queries.json
scripts/: eval.py  ingest.py  main.py
src/agentic_rag/: __init__.py  config.py  health.py  models.py
src/agentic_rag/cache/: semantic_cache.py
src/agentic_rag/evaluation/: evaluator.py
src/agentic_rag/feedback/: judge.py  optimizer.py  store.py
src/agentic_rag/ingestion/: base.py  chunker.py  notion.py
src/agentic_rag/llm/: azure_openai.py  base.py  ollama.py  openai_compat.py  sentence_transformers_llm.py
src/agentic_rag/observability/: __init__.py  langfuse.py
src/agentic_rag/pipeline/: coordinator.py  memory.py  rag_pipeline.py  sources.py  synthesizer.py
src/agentic_rag/retrieval/: __init__.py  base.py  bm25.py  chroma.py  hybrid.py  reranker.py
src/agentic_rag/utils/: __init__.py  errors.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_app_ingest.py  test_azure_openai_llm.py  test_bm25_reload.py  test_chunker.py  test_chunker_split_long_text.py  test_config.py  test_feedback_store.py  test_hybrid.py  test_hybrid_retriever_search.py  test_judge.py  test_memory.py  test_optimizer.py  test_reranker.py  test_semantic_cache.py
