[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.2.0",
    "chromadb>=1.5.2",
    "duckduckgo-search>=8.1.1",
    "langgraph>=1.0.9",
    "notion-client>=3.0.0",
    "ollama>=0.6.1",
    "onnxruntime>=1.18,<1.20",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
