[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.2.0",
    "chromadb>=1.5.2",
    "numpy>=1.26",
    "openai>=1.0",
    "redis[asyncio]>=5.0",
    "tavily-python>=0.5.0",
    "langgraph>=1.0.9",
    "langfuse>=2.0.0",
    "notion-client>=3.0.0",
    "ollama>=0.6.1",
    "onnxruntime>=1.18,<1.20",
    "pillow>=12.1.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "sentence-transformers>=3.0",
    "streamlit>=1.35",
    "watchdog>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.8",
]

[tool.ruff]
exclude = ["eval.py", "ingest.py", "main.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
